...
    var body: some View {
        VStack {
//            HStack {
//                TextField("Change Email", text: self.$newEmail)
//                    .autocapitalization(.none)
//                    .padding()
//                    .accessibility(identifier: "settingsEmail")
//                Button("Save") {
//
//                }
//                .accentColor(.blue)
//                .padding(.horizontal, 15)
//                .padding(.vertical, 5)
//                .accessibility(identifier: "saveEmail")
//                .background(
//                    Capsule()
//                        .stroke(Color.blue, lineWidth: 1.0)
//                )
//            }
            HStack {
...
                
            }.padding(.bottom, 100)
            HStack {
                TextField("Enter new Username", text: self.$newUsername)
                    .autocapitalization(.none)
                    .padding()
                    .accessibility(identifier: "settingsUsername")
                Button("Save") {
                    if !newUsername.trimmingCharacters(in: .whitespaces).isEmpty {
                        db.child("Users").observeSingleEvent(of: .value) { (snapshot) in
                            if snapshot.exists() {
                                let users: [String: [String:Any]] = snapshot.value as! [String: [String:Any]]
                                let uid = Auth.auth().currentUser!.uid
...
                                    }
                                }
                            }
                        }
                        
                        let success = UIAlertController(title: "Successfully Changed Username", message: "Your username was changed to " + newUsername + "!", preferredStyle: .alert)
                        let ok = UIAlertAction(title: "Ok", style: .destructive) { _ in
                            
                        }
                        success.addAction(ok)
                        UIApplication.shared.windows.first?.rootViewController?.present(success, animated: true, completion: {
                            
                        })
...
                        })
                    }
                }
                .accentColor(.blue)
                .padding(.horizontal, 15)
                .padding(.vertical, 5)
                .accessibility(identifier: "saveUsername")
                .background(
                    Capsule()
                        .stroke(Color.blue, lineWidth: 1.0)
                )
            }
            HStack {
                TextField("Enter new Phone Number", text: self.$newPhone)
                    .autocapitalization(.none)
                    .padding()
                    .accessibility(identifier: "settingsPassword")
                Button("Save") {
                    if newPhone.count == 10 && Int(newPhone) != nil{
                        db.child("Users").observeSingleEvent(of: .value) { (snapshot) in
                            if snapshot.exists() {
                                let users: [String: [String:Any]] = snapshot.value as! [String: [String:Any]]
                                let uid = Auth.auth().currentUser!.uid
...
                    }

                }
                .accentColor(.blue)
                .padding(.horizontal, 15)
                .padding(.vertical, 5)
                .accessibility(identifier: "savePassword")
                .background(
                    Capsule()
                        .stroke(Color.blue, lineWidth: 1.0)
                )
            }.padding(.bottom, 100)
//            HStack {
...
                        .padding(.vertical)
                        .frame(width: UIScreen.main.bounds.width - 50)
                }
                .background(Color("Color"))
                .cornerRadius(10)
                .padding(.top, 25)
                .accessibilityIdentifier("logoutButton")
            }
        }
        .padding(.horizontal, 15)
        .padding(.bottom, 100)
    }
}
...
