...
                                    Text("Current offers")
                                        .fontWeight(.semibold)
                                        .font(.title2)
                                        .foregroundColor(.black)
                                )
                        }
                        .accessibility(identifier: "currentLink")
                        NavigationLink(destination: HistoryView(oldOffers: [])) {
                            Capsule()
                                .fill(Color.red)
                                .frame(width: 200, height: 100)
                                .overlay(
                                    Text("Exchange History")
...
                        Text("Choose the Price: $")
                        Spacer()

                        TextField("ex. \"50\"", text: $price)
                            .frame(width: 100, height: 25)
                            .textFieldStyle(.roundedBorder)
                            .accessibility(identifier: "ExchangePrice")
                    }.padding(.horizontal, 75)
                    Button("Send Offer"){
                        print(filterGame)
                        print(filterSeller)
                        print(price)
                        if filterGame == "Choose Game" {
                            let error = UIAlertController(title: "Invalid Game", message: "Please choose a Game for which you would like to make an offer!", preferredStyle: .alert)
                            error.view.accessibilityIdentifier = "chooseGame"
                            let ok = UIAlertAction(title: "Ok", style: .destructive) { _ in
                                
                            }
                            error.addAction(ok)
                            UIApplication.shared.windows.first?.rootViewController?.present(error, animated: true, completion: {
                                
...
                    .foregroundColor(.white)
                    .font(.title2)
                    .padding()
                    .background(Color.black)
                    .clipShape(Capsule())
                    .padding(.vertical, 50)
                    .accessibility(identifier: "offerButton")

                }
                .navigationTitle("Exchange Area")
                

            }
...
